[project]
name = "gym-pybullet-drones"
version = "2.0.0"
description = "PyBullet Gym environments for single and multi-agent reinforcement learning of quadcopter control"
authors = [{name = "Jacopo Panerati", email = "jacopo.panerati@utoronto.ca"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2",
    "scipy>=1.10",
    "transforms3d>=0.4.1",
    "matplotlib>=3.7",
    "pytest>=7.3,<10.0",
    "pybullet>=3.2.5",
    "gymnasium~=1.2",
    "stable-baselines3>=2.0.0",
    "control>=0.10.2",
]

[project.urls]
Repository = "https://github.com/utiasDSL/gym-pybullet-drones"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gym_pybullet_drones"]
